<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <com.kozen.quickstartks.NoTipDecoratedBarcodeView
            android:id="@+id/zxing_barcode_scanner"
            android:layout_marginTop="35dp"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:tooltipText="ffff"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/tvMessage1"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_trans_qr"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_gray_stroke"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/trans_order_num"
                    android:textColor="@color/gray_555"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/tv_order_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="20240520111111"
                    android:textColor="@color/gray_555"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/trans_order_time"
                    android:textColor="@color/gray_555"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/tv_order_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="2024-5-20 20:30:15"
                    android:textColor="@color/gray_555"
                    android:textSize="18sp" />

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/trans_amount"
                android:textColor="@color/gray_555"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/tv_amount"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="25sp" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_above="@+id/tv_cancel"
        android:orientation="horizontal">
        <ImageView

            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:src="@drawable/dot0"
            android:gravity="center" />
        <ImageView

            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:src="@drawable/dot0"
            android:gravity="center" />
        <ImageView

            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:src="@drawable/dot0"
            android:gravity="center" />
        <ImageView

            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:src="@drawable/dot0"
            android:gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:id="@+id/ll_light"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_above="@+id/tv_cancel"
        android:orientation="horizontal">

        <ImageView

            android:id="@+id/iv1"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:src="@drawable/dot1"
            android:gravity="center" />
        <ImageView

            android:id="@+id/iv2"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:src="@drawable/dot2"
            android:gravity="center" />
        <ImageView

            android:id="@+id/iv3"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:src="@drawable/dot3"
            android:gravity="center" />
        <ImageView

            android:id="@+id/iv4"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:src="@drawable/dot4"
            android:gravity="center" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/blue_btn_light"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/text_cancel"
        android:textColor="@color/main1"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>